# fastapi-vercel-template

./: .editorconfig  .gitignore  .vercelignore  LICENSE  Makefile  README.md  pyproject.toml
api/: index.py
app/: main.py
app/routers/: system.py
tests/routers/: test_system_router.py
