[tool.poetry]
name = "vercel-fastapi-template"
version = "0.1.0"
description = ""
authors = ["Kevin Bradwick <kevinbradwick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
uvicorn = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
